--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "client": "npm start --prefix client",
     "clientInstall": "npm i --prefix client",
     "clientBuild": "react-scripts build --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "bash postbuild.bash"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "proxy": "http://localhost:5000/",
   "keywords": [],
@@ -29,7 +28,7 @@
     "knex": "^3.1.0",
     "mysql2": "^3.6.5",
     "node-schedule": "^2.1.1",
-    "puppeteer": "^21.6.0",
+    "puppeteer": "^21.6.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "user-agents": "^1.1.49"
